--- a/html/blog_post.html
+++ b/html/blog_post.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="/css/blog_post.css" />
+        <link rel="stylesheet" href="css/blog_post.css" />
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
         <title>Blog Post page</title>
@@ -18,7 +18,7 @@
         <div class="container">
             <article class="author">
                 <h3>Author Info</h3>
-                <img class="avatar" src="/static/cola.jpg" alt="Avatar">
+                <img class="avatar" src="static/cola.jpg" alt="Avatar">
                     <ul>
                         <li>Cola Singleton</li>
                         <li>Software Engineer</li>
@@ -44,7 +44,7 @@
             <section class="buttons">
                 <a href ="https://www.linkedin.com/mwlite/in/colasingleton"><button type="button" class="btn-primary">Linked<i class="fa fa-linkedin-square" aria-hidden="true"></i></button></a>
                 <a href="https://github.com/Colasingleton?tab=repositories"><button type="button" class="btn-primary">GitHub<i class="fa fa-github-square" aria-hidden="true"></i></button></a>
-                <a href="/index.html"><button>Back to Homepage</button></a>
+                <a href="index.html"><button>Back to Homepage</button></a>
 
             </section>
         </div>
