--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/main.css" />
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-        <title>Blog Homepage page</title>
+        <title>Blog Homepage</title>
         
     </head>
     <body>
